Add missing POST method on order
