# order/views.py
@@ -2,7 +2,7 @@ from django.shortcuts import render
 
 # Create your views here.
 from rest_framework import viewsets, mixins
-from rest_framework.generics import ListAPIView, RetrieveUpdateDestroyAPIView
+from rest_framework.generics import ListAPIView, RetrieveUpdateDestroyAPIView, CreateAPIView
 from rest_framework.viewsets import GenericViewSet
 
 from order.models import Order, MenuItem
@@ -14,12 +14,17 @@ class OrderListView(ListAPIView):
     serializer_class = OrderSerializer
 
 
+class OrderCreateView(CreateAPIView):
+    queryset = Order.objects.all()
+    serializer_class = OrderSerializer
+
+
 class OrderViewSet(RetrieveUpdateDestroyAPIView):
     queryset = Order.objects.all()
     lookup_field = 'id'
     serializer_class = OrderSerializer
 
 
-class MenuItemViewSet(mixins.ListModelMixin, GenericViewSet):
+class MenuItemViewSet(ListAPIView):
     queryset = MenuItem.objects.all()
     serializer_class = MenuItemSerializer
